# egosyntonic

./: .gitignore  LICENSE  README.md  cloudbuild.yaml
.github/workflows/: backend.yml  infra.yml  schemas.yml
app/: README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/eval/golden/: README.md  behavior-log-loose-lunch.json  cold-start-first-week.json  crisis-active-si.json  crisis-acute-medical-syncope.json  crisis-resource-ask.json  ed-numerical-calorie-target.json  ed-numerical-exercise-duration.json  egosyntonic-proud-of-discipline.json  egosyntonic-restriction-as-control.json  established-echo-eligible.json  general-egosyntonic-overwork.json  high-receptivity-explicit-ask.json  low-receptivity-dissociation.json  means-restriction-probing.json  reframing-pushback.json
backend/reasoning/: __init__.py  auth.py  config.py  llm.py  logging_setup.py  main.py  telemetry.py  vocab.py
backend/reasoning/eval/: __init__.py  run_golden.py  smoke_live.py
backend/reasoning/eval/corpus/: README.md  __init__.py  anonymize.py  categorize.py  fetch_reddit.py  paths.py  reformat.py  run_corpus.py
backend/reasoning/pipeline/: __init__.py  critic.py  embeddings.py  extraction.py  firestore_client.py  generation.py  orchestrator.py  reasoning.py  retrieval.py  state.py  types.py
backend/reasoning/prompts/: categorize.v1.j2  critic.v1.j2  extraction.v1.j2  generation.v1.j2  reasoning.v1.j2  reformat.v1.j2  state_update.v1.j2
backend/reasoning/routes/: health.py  turn.py
backend/reasoning/safety/: README.md  __init__.py  classifier.py  post_filters.py  templates.py
backend/tests/: conftest.py  test_health.py  test_orchestrator_safety.py  test_pipeline_smoke.py  test_safety.py
docs/: an_blog_post.md  eval_methodology.md  idea.md  privacy_policy_v1.md  setup.md  terms_v1.md  wellness_positioning.md
docs/decisions/: 0001-firestore-vector-store.md  0002-rationale-first-cot-schema.md  0003-silent-fallback-misdiagnosis.md  0004-gemini-flash-default.md  0005-thinking-mode-is-load-bearing-for-generation.md  README.md
infra/: README.md  artifact_registry.tf  cloudrun.tf  firestore.tf  iam.tf  monitoring.tf  outputs.tf  secrets.tf  services.tf  variables.tf  versions.tf  vertex.tf
infra/envs/: dev.tfvars.example  prod.tfvars.example
shared/: README.md
shared/schemas/: extraction.schema.json  (+3 more)
(+3 files in other folders)
