[project]
name = "egosyntonic-backend"
version = "0.1.0"
description = "egosyntonic CoT reasoning backend — FastAPI service on Cloud Run."
requires-python = ">=3.12,<3.13"
license = "MIT"

dependencies = [
    # HTTP / framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.2",
    "sse-starlette>=2.1.3",
    # Validation / config
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    # Templating (prompts)
    "jinja2>=3.1.4",
    # Google AI / GCP
    "google-genai>=0.5.0",
    "google-cloud-aiplatform>=1.71.0",
    "google-cloud-firestore>=2.18.0",
    "google-cloud-tasks>=2.16.0",
    "google-cloud-secret-manager>=2.20.0",
    "firebase-admin>=6.5.0",
    # Observability
    "structlog>=24.4.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-gcp-trace>=1.7.0",
    # JSON Schema validation
    "jsonschema>=4.23.0",
    # Reddit API for the eval corpus pipeline
    "asyncpraw>=7.7.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "pyright>=1.1.385",
    "respx>=0.21.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reasoning"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["reasoning", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle, pyflakes
    "I",                 # isort
    "B",                 # bugbear
    "UP",                # pyupgrade
    "ASYNC",             # asyncio gotchas
    "S",                 # bandit (security)
    "RUF",               # ruff-specific
]
ignore = [
    "S101",  # asserts are fine in tests
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.pyright]
include = ["reasoning", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
